[package]
name = "node_rust"
version = "0.0.1"
authors = ["Yevhen Blotskyi <lovecraft.crowley@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[lib]
name = "_node_rust"
path = "src/lib.rs"
crate-type = ["dylib"]
